# pkcs11_for_dummies

./: CMakeLists.txt  README.md
pkcs11_headers/: rtpkcs11t.h
src/: ex0_format_token.c  ex10_raw_sign_another_way.c  ex1_change_pin.c  ex2_wait_for_slot_event.c  ex3_gen_gost_key_pair.c  ex4_raw_sign.c  ex5_create_csr.c  ex6_import_cert.c  ex7_sign_cms.c  ex8_get_cert_and_set_label.c  ex9_encrypt.c  utils.c  utils.h
src/include/: Common.h  win2nix.h  wintypes.h
